--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ntn-boilerplate",
+  "name": "clinicamarquezamo",
   "version": "2.1.2",
-  "description": "Nuxt-Tailwind-NetlifyCMS boilerplate",
-  "author": "Sven Parker <hello+dev@svenparker.com> (https://svenparker.com)",
+  "description": "Clinica Marquez Amo",
+  "author": "Jonathan Unai (https://unai.me)",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Knogobert/ntn-boilerplate#readme"
+    "url": "https://github.com/jonathanunai/marquezamo.com"
   },
   "license": "MIT",
   "dependencies": {
@@ -26,11 +26,11 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "netlify-cli": "^7.0.0",
+    "netlify-cli": "^8.0.0",
     "nuxt-purgecss": "^1.0.0",
     "postcss": "^8.3.11",
     "postcss-easing-gradients": "^3.0.1",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^7.0.0",
     "prettier": "^2.4.1",
     "vue-content-placeholders": "^0.2.1"
   }
