--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/i18n": "^7.2.0",
     "nuxt": "^2.15.8"
   },
   "devDependencies": {
