--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
-site_url: https://ecstatic-meitner-2fc787.netlify.app/
-logo_url: https://ecstatic-meitner-2fc787.netlify.app/android-chrome-192x192.png
+site_url: https://www.marquezamo.com/
+logo_url: https://www.marquezamo.com/img/icon.png
 
 backend:
   name: git-gateway
@@ -43,26 +43,9 @@ collections:
               hint: 'Describe la clínica',
               i18n: true,
             }
-          - {
-              label: Idioma del sitio,
-              name: sitelang,
-              widget: string,
-              pattern: ['^[a-z]{2}([-])?([A-Za-z]{2})?$', 'Must match "xx" or "xx-XX" syntax (ex. "en" or "sv-SE")'],
-            }
-          # - { label: Site Email, name: siteemail, widget: string, required: false }
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
-    create: true
-    format: 'frontmatter'
-    slug: '{{fields.createdAt}}-{{slug}}'
-    # editor:
-    #   preview: true
-    fields:
-      - { label: 'Created Date', name: 'createdAt', widget: 'datetime', date_format: 'YYYY-MM-DD', time_format: false }
-      - { label: 'Title', name: 'title', widget: 'string', required: true }
-      - { label: 'Description', name: 'description', widget: 'string', required: false }
-      - { label: 'Body', name: 'body', widget: 'markdown', required: false }
+          - { label: Dirección física, name: siteaddress, widget: string, hint: 'calle...', i18n: true }
+          - { label: Teléfono, name: sitephone, widget: string, hint: '91...', i18n: true }
+          - { label: Correo electrónico, name: siteemail, widget: string, hint: 'nombre@example.com', i18n: true }
   - name: 'projects'
     label: 'Projects'
     label_singular: 'Project'
