--- a/static/adpin/config.yml
+++ b/static/adpin/config.yml
@@ -23,7 +23,7 @@ collections:
     name: 'site'
     i18n: true
     files:
-      - label: 'Información'
+      - label: 'Información general'
         name: 'info'
         file: 'content/site/info.json'
         format: 'json'
@@ -46,31 +46,34 @@ collections:
           - { label: Dirección física, name: siteaddress, widget: string, hint: 'calle...', i18n: duplicate }
           - { label: Teléfono, name: sitephone, widget: string, hint: '91...', i18n: duplicate }
           - { label: Correo electrónico, name: siteemail, widget: string, hint: 'nombre@example.com', i18n: duplicate }
-  - name: 'projects'
-    label: 'Projects'
-    label_singular: 'Project'
-    folder: 'content/projects'
-    create: true
-    format: 'frontmatter'
-    slug: '{{slug}}'
-    preview_path: 'projects/{{slug}}'
-    fields:
-      - {
-          label: 'Project Category',
-          name: 'category',
-          widget: 'select',
-          default: 'animals',
-          options: [{ label: 'Animals', value: 'animals' }, { label: 'Food', value: 'food' }],
-        }
-      - { label: 'Title', name: 'title', widget: 'string', required: true }
-      - { label: 'Description', name: 'description', widget: 'string', required: false }
-      - { label: 'Cover Image', name: 'cover', widget: 'image', required: false, allow_multiple: false }
-      - { label: 'Content', name: 'body', widget: 'markdown', required: false }
-      - {
-          label: 'Gallery',
-          name: 'gallery',
-          widget: 'list',
-          required: false,
-          summary: '{{fields.image}}',
-          field: { label: 'Image', name: 'image', widget: 'image' },
-        }
+      - label: 
+
+
+  # - name: 'projects'
+  #   label: 'Projects'
+  #   label_singular: 'Project'
+  #   folder: 'content/projects'
+  #   create: true
+  #   format: 'frontmatter'
+  #   slug: '{{slug}}'
+  #   preview_path: 'projects/{{slug}}'
+  #   fields:
+  #     - {
+  #         label: 'Project Category',
+  #         name: 'category',
+  #         widget: 'select',
+  #         default: 'animals',
+  #         options: [{ label: 'Animals', value: 'animals' }, { label: 'Food', value: 'food' }],
+  #       }
+  #     - { label: 'Title', name: 'title', widget: 'string', required: true }
+  #     - { label: 'Description', name: 'description', widget: 'string', required: false }
+  #     - { label: 'Cover Image', name: 'cover', widget: 'image', required: false, allow_multiple: false }
+  #     - { label: 'Content', name: 'body', widget: 'markdown', required: false }
+  #     - {
+  #         label: 'Gallery',
+  #         name: 'gallery',
+  #         widget: 'list',
+  #         required: false,
+  #         summary: '{{fields.image}}',
+  #         field: { label: 'Image', name: 'image', widget: 'image' },
+  #       }
